# SQL-Query-Optimizer-and-Execution-Engine

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  query_optimizer.sln  query_optimizer.vcxproj  query_optimizer.vcxproj.filters
query_optimizer/: CMakeLists.txt
query_optimizer.dir/Release/: .d.json  aggregate.cpp.module.json  ast.cpp.module.json  executor.cpp.module.json  parser.cpp.module.json  plan.cpp.module.json  scan.cpp.module.json  table.cpp.module.json  utils.cpp.module.json
query_optimizer.dir/Release/query_optimizer.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  query_optimizer.lastbuildstate
query_optimizer.dir/Release/query_optimizer_MD.tlog/: Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
query_optimizer/src/: CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  engine.cpp
x64/release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
